--- a/contato.html
+++ b/contato.html
@@ -31,11 +31,9 @@
 <div class="number"><p>+55(31)972386579</p></div>
 
 
-<div class="voltar">
-    <a href="index.html">VOLTAR</a>
-</div>
 
-<form class="formulario" action="https://api.web3forms.com/submit" method="POST">
+
+<form class="formulario" id="form">
   <p class="tituloform">Me envie uma mensagem</p>
   <input type="hidden" name="access_key" value="b8c790b9-f78a-49c4-8be9-445f4f141b51">
   <br>
@@ -51,8 +49,10 @@
   <button class="submittxt" type="submit">Enviar</button>
 </form>
 
+<div class="voltar">
+    <a href="index.html">VOLTAR</a>
+</div>
 
-<footer id="footer">--------------------------------------------\\PortifólioDoArthur//--------------------------------------------</footer>
-
+<footer id="footer">------\\PortifólioDoArthur//------</footer>
 </body>
 </html>
