--- a/projetos.html
+++ b/projetos.html
@@ -22,9 +22,9 @@
         <div class="titulo">Meus Projetos</div>
 </div>
 
-<div class="btn" id="b1"><a href="">Protótipo site <br> e-commerce</a></div>
-<div class="btn" id="b2"><a href="">Recriação do Site <br>  Tulen da Colorib</a></div>
-<div class="btn" id="b3"><a href="">Modelo 3d do <br> Blender</a></div>
+<div class="btn" id="b1"><a href="https://arthur-tb.github.io/ALLWARE/">Protótipo site <br> e-commerce</a></div>
+<div class="btn" id="b2"><a href="https://arthur-tb.github.io/SiteTulen/">Recriação do Site <br>  Tulen da Colorib</a></div>
+<div class="btn" id="b3"><a href="https://drive.google.com/file/d/1o-MyMsQnsj71sn_TVU37gUxds6vl3Q_J/view?usp=sharing">Modelo 3d do <br> Blender</a></div>
 
 
 <div class="voltar">
@@ -32,7 +32,7 @@
 </div>
 
 
-<footer id="footer">--------------------------------------------\\PortifólioDoArthur//--------------------------------------------</footer>
+<footer id="footer">------\\PortifólioDoArthur//------</footer>
 
 </body>
 </html>
