--- a/sobre.html
+++ b/sobre.html
@@ -32,7 +32,7 @@
     <a href="index.html">VOLTAR</a>
 </div>
 
-<footer id="footer">--------------------------------------------\\PortifólioDoArthur//--------------------------------------------</footer>
+<footer id="footer">------\\PortifólioDoArthur//------</footer>
 
 </body>
 </html>
