--- a/habilidades.html
+++ b/habilidades.html
@@ -44,7 +44,6 @@
 </div>
 
 
-<footer id="footer">--------------------------------------------\\PortifólioDoArthur//--------------------------------------------</footer>
-
+<footer id="footer">------\\PortifólioDoArthur//------</footer>
 </body>
 </html>
